# reels-ai

./: .dockerignore  .gitignore  Cargo.toml  PR_DESCRIPTION.md  README.md  SECURITY_AUDIT_FEED.md  openapi_spec_path.txt  package.json  search_results.txt  today.md  verification_patched_mod_rs.md
crates/agentloop/: Cargo.toml  Dockerfile  Makefile  README.md  app_state_usage.txt  brief.md  brief_v2.md  data_structures.md  function_signatures.md  llmusage.txt  response_cutoff_analysis.md
crates/agentloop/backend/: db_schema.sql
crates/agentloop/docs/: extending_tools.md
crates/agentloop/frontend/: index.html  package-lock.json  package.json  style.html  style_grok.html  tailwind.config.js  vite.config.js  ws_schema.json
crates/agentloop/frontend/public/: index.html
crates/agentloop/frontend/src/: App.jsx  index.css  main.jsx  schema.json
crates/agentloop/frontend/src/components/: ChatInterface.jsx  InputArea.jsx  MessageBubble.jsx  ProgressIndicator.jsx  ResearchItemDisplayCard.jsx  SelectResearchItemsModal.jsx  theme-provider.tsx
crates/agentloop/frontend/src/hooks/: useAgentLoopWebSocket.js
crates/agentloop/frontend/src/lib/: utils.js
crates/agentloop/frontend_reference/: tailwind.config.ts
crates/agentloop/frontend_reference/app/: globals.css  layout.tsx
crates/agentloop/src/: app_setup.rs  assets.rs  lib.rs  lib_runner.rs  main.rs  main_internal.rs  openapi.rs  setup.rs
crates/agentloop/src/auth/: middleware.rs
crates/agentloop/src/config/: app_config.rs  external_tools_config.rs  llm_config.rs  load_env_config.rs  mod.rs  routes.rs
crates/agentloop/src/conversation/: conversation_history.rs  final_answer.rs  mod.rs  prompt.rs  stream.rs
crates/agentloop/src/conversation/compaction/: check_termination.rs  compact_history.rs  evaluate_context.rs  mod.rs  should_compact_history.rs  summarize_entries.rs
crates/agentloop/src/evaluator/: mod.rs  run_research_loop.rs  run_research_loop_sync.rs
crates/agentloop/src/evaluator/research_loop/: check_sufficiency_for_answer.rs  check_termination_conditions.rs  handle_compaction.rs  handle_tool_calls.rs  initialize_loop.rs  mod.rs  process_llm_turn.rs
crates/agentloop/src/handlers/: conversation_stream.rs  get_session_state.rs  get_status.rs  load_session_state.rs  mod.rs  post_message.rs  run_research_sync.rs  start_research.rs  static_files.rs  terminate_session.rs
crates/agentloop/src/session/: manager.rs
crates/agentloop/src/state/: app_state.rs  get_session_ids.rs  init_app_state.rs  mod.rs
crates/agentloop/src/tools/: dispatch_tools.rs  handle_browse.rs  handle_save_context.rs  handle_search.rs  internal_tools.rs  mod.rs  tool_handler.rs  tools_schema.rs
crates/agentloop/src/types/: agent_error.rs  attachment.rs  attachment_type.rs  binary_attachment.rs  compaction_policy.rs  context_entry.rs  context_evaluator_feedback.rs  conversation_entry.rs  evaluation_policy.rs  full_tool_response.rs  image_attachment.rs  llm_agent_response.rs  llm_context_evaluation.rs  llm_conversation_response.rs  llm_summary_response.rs  llm_termination_decision.rs  load_session_request.rs  message.rs  mod.rs  pdf_attachment.rs  progress_update.rs  research_request.rs  research_response.rs  sender.rs  session.rs  session_config.rs  session_data.rs  session_id.rs  session_status.rs  status_response.rs  termination_request.rs  text_attachment.rs  timestamp.rs  tool_choice.rs  tool_definition.rs  tool_parameters.rs  tool_response.rs  user_tool_failure.rs  user_tool_response.rs  video_url_attachment.rs  (+2 more)
crates/agentloop/src/utils/: message_formatter.rs  mod.rs  serde_option_duration_as_secs.rs
crates/agentloop/src/websocket/: handler.rs  mod.rs
crates/api_clients/: Cargo.toml  README.md  bounti.txt  serper.txt
crates/api_clients/doc/dom_smoothie/: all.html  enum.CandidateSelectMode.html  enum.ParsePolicy.html  enum.ReadabilityError.html  enum.TextMode.html  fn.is_probably_readable.html  index.html  sidebar-items.js  struct.Article.html  struct.Config.html  struct.Metadata.html  struct.Readability.html
crates/api_clients/doc/dom_smoothie/config/: enum.CandidateSelectMode.html  enum.ParsePolicy.html  (+2 more)
crates/api_clients/src/: lib.rs  main.rs
crates/api_clients/src/serper/: client.rs  mod.rs
crates/api_clients/src/webflow/: client.rs
crates/api_clients/src/zyte/: action.rs  article.rs  client.rs  dom_smoothie.md  error.rs  fetch_and_parse_sitemap.rs  fetch_and_save_text.rs  fetch_browser_html.rs  fetch_clean_and_save_page.rs  filter_sitemap_urls.rs  mod.rs  request.rs  response.rs  screenshot_options.rs  simplified_article.rs  sitemap_processor.rs
crates/llm/: .gitignore  Cargo.toml  README.md
crates/llm/src/: broken_json_loads.rs  constants.rs  few_shots_traits.rs  hacky_json_loads.rs  hacky_toml_loads.rs  hacky_yaml_loads.rs  lib.rs  typed.rs
crates/llm/src/broken_jsons/: broken.json
crates/llm/src/llm_typed_unified/: find_model_by_alias.rs  get_bpe.rs  handle_raw_json_response.rs  handle_raw_toml_response.rs  handle_raw_yaml_response.rs  llm.rs  llm_typed.rs  llm_typed_log.rs  mod.rs  output_format.rs  toml_value_to_json_value.rs  validate_value_unified.rs  vendor_model.rs  write_log.rs  yaml_value_to_json_value.rs
crates/llm/src/unified_conversation/: mod.rs  unified_conversation.rs  unified_message.rs  unified_message_content.rs  unified_role.rs
crates/llm/src/vendors/: mod.rs
crates/reels/backend/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
crates/reels/backend/devdocs/: luthor.html  luthor.typ  luthor_printable.html  sqlx_conditional_query_as_docs_dynamic_compiled_queries.md  typst_docs.md
crates/reels/backend/email_templates/: README.md  password_reset_email.html  verification_email.html  welcome_email.html
crates/reels/backend/src/: app.rs  db_pool.rs  db_queries_routes.md  email_service.rs  gcp_auth.rs  lib.rs  main.rs  openapi.rs  stripe_payment.rs  user_management.rs
validation_scripts/: Cargo.toml  README.md  continuous_validation.rs  phase1_error_validation.rs  phase2_database_validation.rs  phase3_events_validation.rs  run_validation.sh  troubleshooting.md
(+1561 files in other folders)
