[package]
name = "agentloop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main_internal.rs"
name = "server_internal"

[dependencies]
schemars = { version = "1.0.0-alpha.17", features = ["chrono04", "uuid1", "preserve_order", "url2"]}
tracing = "0.1"

tokio = { version = "1", features = ["full"] }
actix-web = "4.0" # Use actix-web for API
actix = { version = "0.13", features = ["macros"] } # Keep if needed for Recipient in AppState, though actix-web might suffice
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0" # For JSON handling
env_logger = "0.10" # For logging initialization
log = "0.4" # Logging facade
rust-embed = "8.7.0" # For embedding frontend assets
clap = { version = "4.5.11", features = ["derive"] } # For CLI argument parsing
indicatif = "0.17" # For progress bars in CLI
anyhow = "1.0" # Error handling
futures = "0.3" # Async utilities
llm = { path = "../llm" }
api_tools = { path = "../api_clients" }
futures-util = "0.3" # Required for Stream and StreamExt
# The 'tracing = "0.1"' part of the malformed line is omitted as it's a duplicate of an earlier entry.
actix-web-actors = "4.0" # WebSocket actors for Actix-web
thiserror = "1.0"    # Required for #[derive(Error)] and #[error] attribute
async-stream = "0.3" # Required for async_stream::stream! macro

actix-cors = "0.7" # Required for CORS middleware
dotenvy = "0.15.7"
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
mime_guess = "2.0.4" # Needed for serving static files correctly
regex = "1.0" # For extracting video URLs from responses