[package]
name = "api_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] } # For parsing sitemap lastmod dates
sitemap = "0.4" # Check for latest compatible version
indicatif = "0.17" # Check for latest compatible version
futures = "0.3"
url = "2.5" # For URL parsing and manipulation
async-recursion = "1.0" # May be useful for recursive processing if needed later
reqwest = { version = "0.11", features = ["json", "blocking", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
thiserror = "1.0"
base64 = "0.21" # Or latest stable version for Basic Auth encoding
scraper = "0.19" # For HTML parsing and cleaning
clap = { version = "4", features = ["derive"] } # Moved from dev-dependencies for CLI binary
html-escape = "0.2.13"
lopdf = "0.26.0" # For PDF parsing support
dotenv = "0.15.0"
dom_smoothie = "0.11.0"

[dev-dependencies]
rand = "0.8" # For tests random number generation
# Add dev dependencies if needed later


[[bin]]
name = "tool"
path = "src/main.rs"