[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agentloop = { path = "../../agentloop" }
# Commented out since we've created local replacements
# api_clients = { path = "../../api_clients" } 
actix-multipart = "0.7.0"
sha2 = "0.10.8"
thiserror = "*" # Added for WebflowError
url = { version = "2", features = ["serde"] }
urlencoding = "2.1" # For URL decoding
regex = "1" # For HTML color extraction
futures-util = "*" # Added to fix compilation error E0433
llm = {path = "../../../crates/llm"}
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
jsonschema = "0.30"
bcrypt = "0.15.0"
anyhow = "*"
db_ip = "0.3"
reqwest = { version = "*", features = ["json", "blocking"] }
mime_guess = "*"
serde_yaml = "*"
tiktoken-rs = "*"
schemars = { version = "1.0.0-alpha.15", features = ["chrono04", "uuid1", "preserve_order", "url2"]}
serde_with = { version = "*", features = ["json"] }
jsonwebtoken = "9.3"
rand = "0.8.5"
oauth2 = "4.4"
actix-web = "4.11.0"
actix-http = "3.11.0" # Added for direct use  
actix-rt = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web", "vendored"] }
env_logger = "0.11"
log = "0.4"
postmark = { version ="0.11.2", features = ["reqwest"] }
actix-cors = "0.7"
base64 = "0.22.1"
kuchikiki = "0.8.2"
scraper = "0.19.0" # Using scraper for HTML parsing
futures = "0.3.31"
google-cloud-storage = "0.24.0"
google-cloud-scheduler-v1 = "0.4.2"
google-cloud-tasks-v2 = "0.4.2"
google-cloud-token = "0.1.2"
async-trait = "0.1.88"
gcp-bigquery-client = "0.25.1"
gcp_auth = { version = "0.10" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-attributes = "0.1"
actix-web-opentelemetry = { version = "0.18.0" }
mime = "0.3"
aes-gcm = "0.10.3"
hex = "0.4.3"
hmac = "0.12"
backoff = { version = "0.4.0", features = ["tokio"] }
async-stream = "0.3.5"
bytes = "1.5.0"
docx-rust = "0.1.10"
calamine = "0.23.0"
opentelemetry = { version = "0.22.0", features = ["trace"]}
google-cloud-wkt = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
api_tools = { path = "../../api_clients" }
once_cell = "1.19" # Added for global static pool in main.rs
serial_test = "3.0.0"
gennodes-client = { git = "https://github.com/bountihq/gennodes-client.git", branch = "main" }
indexmap = "2.10.0"
mp4 = "0.14.0" # For extracting MP4 video duration
photon-rs = { version = "0.3.2", default-features = false }
image = "0.24"
percent-encoding = "2"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "1.0", features = ["derive"] } # Also needed if your test structs use derive
serde_json = "1.0"
actix-web = { version = "4", features = ["macros"] }
actix-rt = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9" # Or the version you are using
serde_urlencoded = "0.7" # For query parameters
urlencoding = "2.1" # For URL encoding in tests


[features]
default = ["events"]
events = []
